syntax = "proto3";

package task.v1;

option go_package = "api/grpc/proto/golang";

import "google/api/annotations.proto";
import "api/grpc/proto/task_struct.proto";

message ListTasksRequest {
  repeated Task tasks = 1;
}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message GetTaskRequest {
  string id = 1;
}

message GetTaskResponse {
  Task task = 1;
}

message CreateTaskRequest {
  Task task = 1;
}

message CreateTaskResponse {
  Task task = 1;
}

message UpdateTaskRequest {
  Task task = 1;
}

message UpdateTaskResponse {
  Task task = 1;
}

message DeleteTaskRequest {
  string id = 1;
}

message DeleteTaskResponse {
  Task task = 1;
}

service TaskService {
    rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {}

    rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {
      option (google.api.http) = {
        get: "/v1/tasks/{id}"
      };
    }

    rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
    rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse) {}
    rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
  }